# ChauffageDansLaMaison

./: CMakeLists.txt  MakeFile  consigne.c  define.h  regulation.c  regulation.h  releve.c  trace.txt  visualisationC.c  visualisationT.c
IHM/: data.txt
Sim/: simulateur.h  test_simulateur.c
test/: autotests.c
